--- a/_config.yml
+++ b/_config.yml
@@ -16,10 +16,10 @@ minimal: false             # use a dark header
 # Menu
 
 navigation:                # accepts {file, title, url, icon, sidebaricon}
-  - {file: "index.html", title: Home Change, icon: home}
-  - {file: "README.md", title: About me, icon: address-card}
-  - {file: "CV.md", title: CV, icon: file}
-  - {file: "Research.md", title: Research, icon: book-open}
+  - {file: "index.html", title: "Home Change", icon: home}
+  - {file: "README.md", title: "About me", icon: address-card}
+  - {file: "CV.md", title: "CV", icon: file}
+  - {file: "Research.md", title: "Research", icon: book-open}
 
 external:                  # shows a footer with social links - for available icons see fontawesome.com/icons
   - {title: Mail, icon: envelope, url: "mailto:krishnateja128@gmail.com"}
