--- a/_config.yml
+++ b/_config.yml
@@ -16,7 +16,7 @@ minimal: false             # use a dark header
 # Menu
 
 navigation:                # accepts {file, title, url, icon, sidebaricon}
-  - {file: "index.html", title: "Home Change", icon: home}
+  - {file: "index.md", title: "Home", icon: home}
   - {file: "README.md", title: "About me", icon: address-card}
   - {file: "CV.md", title: "CV", icon: file}
   - {file: "Research.md", title: "Research", icon: book-open}
