--- a/_config.yml
+++ b/_config.yml
@@ -17,9 +17,9 @@ minimal: false             # use a dark header
 
 navigation:                # accepts {file, title, url, icon, sidebaricon}
   - {file: "index.md", title: "Home"} #, icon: home}
-  # - {file: "README.md", title: "About me", icon: address-card}
-  - {file: "CV.md", title: "CV"} #, icon: file}
-  - {file: "Research.md", title: "Research"} #, icon: book-open}
+  # - {file: "readme.md", title: "About me", icon: address-card}
+  - {file: "cv.md", title: "CV"} #, icon: file}
+  - {file: "research.md", title: "Research"} #, icon: book-open}
 
 external:                  # shows a footer with social links - for available icons see fontawesome.com/icons
   - {title: Mail, icon: envelope, url: "mailto:krishnateja128@gmail.com"}
