--- a/_config.yml
+++ b/_config.yml
@@ -16,7 +16,7 @@ minimal: false             # use a dark header
 # Menu
 
 navigation:                # accepts {file, title, url, icon, sidebaricon}
-  - {file: "index.md", title: "Teja Konduri"} #, icon: home}
+  # - {file: "index.md", title: "Teja Konduri"} #, icon: home}
   # - {file: "readme.md", title: "About me", icon: address-card}
   - {file: "resume.md", title: "Resume"} #, icon: file}
   - {file: "research.md", title: "Research"} #, icon: book-open}
